added a stylesheet and few changes on the nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>TFC</title>  
   </head>
   <body>
+    <!-- NavBar -->
+    <nav>
+      <ul>
+        <li><a href="#chat" class="nav-item">Chat</a></li>
+        <li><a href="#status" class="nav-item">Status</a></li>
+        <li><a href="#Call" class="nav-item">Call</a></li>
+      </ul>
+    </nav>
     
   </body>
 </html>
