styling the navbar

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>TFC</title>  
   </head>
   <body>
     <!-- NavBar -->
-    <nav>
+    <nav id="navBar">
+      <h1>WhatsApp</h1>
       <ul>
         <li><a href="#chat" class="nav-item">Chat</a></li>
         <li><a href="#status" class="nav-item">Status</a></li>
