Done with the navBar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav id="navBar">
       <h1>WhatsApp</h1>
       <ul>
-        <li><a href="#chat" class="nav-item">Chat</a></li>
+        <li><a href="#chat"  class="nav-item">Chat</a></li>
         <li><a href="#status" class="nav-item">Status</a></li>
-        <li><a href="#Call" class="nav-item">Call</a></li>
+        <li><a href="#call" class="nav-item">Call</a></li>
       </ul>
     </nav>
     
